Tried to figure out how to get frequency graph of synthesized vs real data. Figured it out in the added png.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /files/test_measure_simplified.csv
 /files/test_measure_simplified.xlsx
 /files/Train Validate Apply Data Synthesized.xlsx
+/files/merged_data.xlsx
